--- a/langs/zh_TW.json
+++ b/langs/zh_TW.json
@@ -56,7 +56,7 @@
   },
   "replace": {
     "help_not_reply": "請回復一則訊息\n\n用法: /replace <要被取代的文字> <取代的文字>",
-    "not_text": "請回復一個文字信息",
+    "not_text": "請回復一個文字信息或有說明文字的任何檔案",
     "help": "/replace <要被取代的文字> <取代的文字>\n如果想要取代成空白可以使用<code>''</code>",
     "error": "發生錯誤\n\n{0}",
     "result": "{0} 認為 {1} 的意思是 {2}"
