--- a/langs/list.json
+++ b/langs/list.json
@@ -1,1 +1,10 @@
-
+{
+  "zh_TW": {
+    "file": "./langs/zh_TW.json",
+    "display": "繁體中文（台灣）"
+  },
+  "en_US": {
+    "file": "./langs/en_US.json",
+    "display": "English(US)"
+  }
+}
